<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">

    <item
        android:id="@+id/festivalSpecial"
        android:orderInCategory="100"
        android:title="@string/pattern_festival_special"
        app:showAsAction="never" />
    <item
        android:id="@+id/normalPattern"
        android:orderInCategory="100"
        android:title="@string/pattern_normal"
        app:showAsAction="never" />
    <item
        android:id="@+id/dotPattern"
        android:orderInCategory="100"
        android:title="@string/pattern_dot"
        app:showAsAction="never" />
    <item
        android:id="@+id/flowerPattern"
        android:orderInCategory="100"
        android:title="@string/pattern_flower"
        app:showAsAction="never" />

    <item
        android:id="@+id/shareButton"
        android:icon="@drawable/share_img"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/gameCanvas"
        android:orderInCategory="100"
        android:title="@string/digital_pooja"
        app:showAsAction="never" />
</menu>




    <!--

        <item android:id="@+id/linearViewVertical"
              android:title="@string/LinearViewVertical"
              android:orderInCategory="100"
              app:showAsAction="never"/>

       &lt;!&ndash; <item android:id="@+id/gridView"
              android:title="Grid View"
              android:orderInCategory="100"
              app:showAsAction="never"/>
    &ndash;&gt;
        <item android:id="@+id/staggeredViewHorizontal"
              android:title="@string/StaggeredViewHorizontal"
              android:orderInCategory="100"
              app:showAsAction="never"/>

        <item android:id="@+id/staggeredViewVertical"
              android:title="@string/StaggeredViewVertical"
              android:orderInCategory="100"
              app:showAsAction="never"/>
    -->


